# Heart-Disease-Classification

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  README.md  app.py  classifier.py  config.py  data_processor.py  db_manager.py  heart_embeddings_swin.db  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
